--- a/readme.org
+++ b/readme.org
@@ -25,30 +25,30 @@
   determines whether the buffer should be killed when executing
   certain commands (such as focusing a window).
 
-  | Key       | Command                                                   |
-  |-----------+-----------------------------------------------------------|
-  | ~n~       | Move to next line                                         |
-  | ~p~       | Move to previous line                                     |
-  | ~TAB~     | Move to next group                                        |
-  | ~BACKTAB~ | Move to previous group                                    |
-  | ~g~       | Update                                                    |
-  | ~RET~     | Focus and switch to                                       |
-  | ~m~       | Mark                                                      |
-  | ~u~       | Unmark                                                    |
-  | ~U~       | Unmark all                                                |
-  | ~% r~     | Mark windows whose title matches a regex                  |
-  | ~% R~     | Mark windows with the same role as the curent window      |
-  | ~% c~     | Mark windows with the same class as the current window    |
-  | ~% f~     | Mark windows in the same frame as the current window      |
-  | ~% i~     | Mark windows with the same instance as the current window |
-  | ~% g~     | Mark windows in the same group as the current window      |
-  | ~d~       | Mark for kill                                             |
-  | ~x~       | Execute marks                                             |
-  | ~D~       | Kill                                                      |
-  | ~N~       | Rename                                                    |
-  | ~P~       | Pull (move marked windows here)                           |
-  | ~T~       | Throw (move marked windows there)                         |
-  | ~q~       | Quit                                                      |
-  | ~s~       | Split frame vertically (only when point on frame name)    |
-  | ~S~       | Split frame horizontally (only when point on frame name)  |
+  | Key       | Command                                                                                 |
+  |-----------+-----------------------------------------------------------------------------------------|
+  | ~n~       | Move to next line                                                                       |
+  | ~p~       | Move to previous line                                                                   |
+  | ~TAB~     | Move to next group                                                                      |
+  | ~BACKTAB~ | Move to previous group                                                                  |
+  | ~g~       | Update                                                                                  |
+  | ~RET~     | Focus and switch to                                                                     |
+  | ~m~       | Mark                                                                                    |
+  | ~u~       | Unmark                                                                                  |
+  | ~U~       | Unmark all                                                                              |
+  | ~% r~     | Mark windows whose title matches a regex                                                |
+  | ~% R~     | Mark windows by role (defaults to current windows role, use prefix arg to force prompt) |
+  | ~% c~     | Mark windows by class (same)                                                            |
+  | ~% i~     | Mark windows by instance (same)                                                         |
+  | ~% f~     | Mark windows in the same frame as the current window                                    |
+  | ~% g~     | Mark windows in the same group as the current window                                    |
+  | ~d~       | Mark for kill                                                                           |
+  | ~x~       | Execute marks                                                                           |
+  | ~D~       | Kill                                                                                    |
+  | ~N~       | Rename                                                                                  |
+  | ~P~       | Pull (move marked windows here)                                                         |
+  | ~T~       | Throw (move marked windows there)                                                       |
+  | ~q~       | Quit                                                                                    |
+  | ~s~       | Split frame vertically (only when point on frame name)                                  |
+  | ~S~       | Split frame horizontally (only when point on frame name)                                |
 
