--- a/readme.org
+++ b/readme.org
@@ -17,9 +17,7 @@
   Use ~M-x stumpbuffer~ to open the buffer. This should show all
   groups and windows. ~M-x stumpbuffer-other-frame~ can be used to
   open the buffer in another frame, which will be killed when exiting
-  the stumpbuffer. Something like ~emacsclient --eval
-  "(stumpbuffer-other-frame)"~ should work to open a stumpbuffer from
-  outside Emacs.
+  the stumpbuffer.
 
   The customization option ~stumpbuffer-quit-window-after-command~
   determines whether the buffer should be killed when executing
