--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,7 @@
 * StumpBuffer
 
   An IBuffer inspired tool to control Stumpwm from Emacs. Still
-  experimental and unstable. Currently Does not work with floating
+  experimental and unstable. Currently does not work with floating
   groups.
 
   This uses a lot of Stumpwms internals, and so may or may not work on
