--- a/readme.org
+++ b/readme.org
@@ -51,5 +51,5 @@
   | ~q~       | Quit                                                                                    |
   | ~s~       | Split frame vertically (only when point on frame name)                                  |
   | ~S~       | Split frame horizontally (only when point on frame name)                                |
-  | ~C~       | Create new group                                                                        |
+  | ~C~       | Create new group (takes marked windows with it)                                         |
 
