Add command for toggling frame name showing

--- a/readme.org
+++ b/readme.org
@@ -70,6 +70,7 @@
   | ~s~       | Split frame vertically (only when point on frame name)                                  |
   | ~S~       | Split frame horizontally (only when point on frame name)                                |
   | ~C~       | Create new group (takes marked windows with it)                                         |
+  | ~f~       | Toggle frame name display                                                               |
 
 * Extending
 
