--- a/readme.org
+++ b/readme.org
@@ -67,8 +67,8 @@
   | ~P~       | Pull (move marked windows here)                                                         |
   | ~T~       | Throw (move marked windows there)                                                       |
   | ~q~       | Quit                                                                                    |
-  | ~s~       | Split frame vertically (only when point on frame name)                                  |
-  | ~S~       | Split frame horizontally (only when point on frame name)                                |
+  | ~s~       | Split frame vertically (only when point on frame name or window)                        |
+  | ~S~       | Split frame horizontally (only when point on frame name or window)                      |
   | ~C~       | Create new group (takes marked windows with it)                                         |
   | ~f~       | Toggle frame name display                                                               |
 
