--- a/readme.org
+++ b/readme.org
@@ -59,10 +59,10 @@
   | ~% i~     | Mark windows by instance (same)                                                         |
   | ~% f~     | Mark windows in the same frame as the current window                                    |
   | ~% g~     | Mark windows in the same group as the current window                                    |
-  | ~d~       | Mark for kill                                                                           |
+  | ~d~       | Mark for deletion                                                                       |
   | ~*~       | Change all ~*~ marks to a different character                                           |
   | ~x~       | Execute marks                                                                           |
-  | ~D~       | Kill                                                                                    |
+  | ~D~       | Delete                                                                                  |
   | ~N~       | Rename                                                                                  |
   | ~P~       | Pull (move marked windows here)                                                         |
   | ~T~       | Throw (move marked windows there)                                                       |
