--- a/readme.org
+++ b/readme.org
@@ -59,10 +59,12 @@
   | ~% i~     | Mark windows by instance (same)                                                         |
   | ~% f~     | Mark windows in the same frame as the current window                                    |
   | ~% g~     | Mark windows in the same group as the current window                                    |
-  | ~d~       | Mark for deletion                                                                       |
+  | ~d~       | Mark for deletion (asks window to close itself)                                         |
+  | ~k~       | Mark for kill (forces window to die; you should usually use delete instead)             |
   | ~*~       | Change all ~*~ marks to a different character                                           |
   | ~x~       | Execute marks                                                                           |
   | ~D~       | Delete                                                                                  |
+  | ~K~       | Kill window (force it to die)                                                           |
   | ~N~       | Rename                                                                                  |
   | ~P~       | Pull (move marked windows here)                                                         |
   | ~T~       | Throw (move marked windows there)                                                       |
